  * Removed:
    - COD::CIF::Data::CODPredepositionCheck.
    - COD::ShowStruct.
    - STAR::Parser sources.
    - sdf_add_cod_data:
      - the deprecated --tmp-dir option.
    - cif_parse_old_star script.
    - cif_printout:
      - the deprecated --output-struct option.
    - cif_validate:
      - the deprecated --debug option.
    - cod_predeposition_check script.

cod-tools (unreleased)

  * Added:
    - COD::CIF::ChangeLog module.
    - COD::CIF::DDL module.
    - COD::CIF::DDL::DDL1 module.
    - COD::CIF::Tags::Manage:
      - accepting CIF format version number in new_datablock();
      - the 'contains_data_item()' subroutine.
    - data/replacement_values/replacement_values.lst
      - several more value replacement rules.
    - cif_tags_in_list:
      - the --exclude-category-names option;
    - cif_validate:
      - a validation message pertaining to quote usage in combination with
        numeric values;
      - a uniqueness constraint check for simple and composite loop references.
  * Changed:
    - COD::AuthorNames:
      - updated several error messages to only display the original author name
        without any modifications;
    - COD::CIF::Data:
      - slightly reworded several warning messages.
    - COD::CIF::Data::AtomList:
      - rewritten dump_atoms_as_cif() using standard CIF printing routines;
      - updated several warning messages.
    - COD::CIF::Data::Check:
      - replaced a composite warning message pertaining to bibliography-related
        data items with several messages of greater specificity.
    - COD::CIF::Parser::Yapp:
      - replaced the COD::ShowStruct module with Data::Dumper
        for debug prints.
    - dropped test-dependency on 'mysql' command line utility.
    - cif_validate:
      - slightly reworded several validation messages.
    - cif_cod_check:
      - slightly reworded several warning messages.
    - cif_correct_tags:
      - slightly reworded several warning messages.
    - cif_fix_values: