@@ -15,42 +15,6 @@
 #include <unistd.h>
 #include <string.h>
 
-/* FIXME: use exceptions or return NULL pointers and check in
-   strclone() and its clones: */
-#define merror( s ) \
-if( (s) == NULL ) \
-   { \
-     printf("Out of memory in file %s at line %d\n", __FILE__, __LINE__); \
-     exit(99); \
-   }
-
-char *strclone( const char *s )
-{
-   char *new;
-   merror( new = strdup(s) );
-   return new;
-}
-
-char *strnclone( const char *s, size_t length )
-{
-   char *new;
-   merror( new = malloc(length + 1) );
-   strncpy( new, s, length );
-   new[length] = '\0';
-   return new;
-}
-
-char *strappend( char *s, const char *suffix )
-{
-   ssize_t s_length = strlen(s);
-   ssize_t suffix_length = strlen(suffix);
-   char *new;
-   merror( new = realloc(s, s_length + suffix_length + 1) );
-   strcpy( new + s_length, suffix );
-   new[s_length+suffix_length] = '\0';
-   return new;
-}
-
 char translate_escape( char **s )
 {
     switch( *(++(*s)) ) {
