@@ -11,9 +11,6 @@
 #include <unistd.h>
 #include <math.h>
 
-char *strclone( const char *s );
-char *strnclone( const char *s, size_t length );
-char *strappend( char *s, const char *suffix );
 char *process_escapes( char *str );
 char translate_escape( char **s );
 ssize_t countchars( char c, char *s );
