@@ -41,6 +41,8 @@ cod-tools (3.0.0)
     - cif_validate:
       - the deprecated --debug option.
     - cod_predeposition_check script.
+    - codcif:
+      - unused functions strclone(), strnclone() and strappend().
 
 cod-tools (unreleased)
 
